fix abdullah comments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,10 @@
       "eqeqeq": ["error", "always"],
       "no-console": "off",
       "no-undefined": "off",
-      "indent": ["error", 2],
-      "quotes": ["warn", "single"],
+      // "indent": ["error", "tab"],
+      "indent": "off",
+      // "quotes": [2, "backtick", "single"],
+      "quotes": [2, "backtick", "single","double"],
       "no-multi-spaces": [
         "warn",
         {
@@ -33,7 +35,8 @@
           "builtinGlobals": true
         }
       ],
-      "semi": [2, "always"],
-      "eol-last": "error"
+      "semi": [0]
+      // "semi": [2, "always"],
+      // "eol-last": "error"
     }
   }
